Attempt to fix search box on Iphone /addresses #374

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,11 +144,12 @@ h2 {
       position: sticky;
   }
 }
+
 /*iphone stuff*/
 @media (max-width: 760px){
   input {
-    -webkit-appearance: none;
-    -webkit-border-radius: 0;
+    -webkit-appearance: none!important;
+    -webkit-border-radius: 0!important;
     border-radius: 0;
   }
 }
